--- a/index.html
+++ b/index.html
@@ -1,44 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" type="text/css" href="assets/css/style.css" />
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" />
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
 		type="text/css" />
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
 		integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous" />
-    <title>Cat Union</title>
+	<title>Cat Union</title>
 </head>
+
 <body>
     <header>
-        logo 
+		<div class="wrapper-header">
+			<div class="container-fluid heading-navbar">
+				<div class="row">
+					<a class="col-lg-4 col-md-4 col-sm-4 col-4 logo" href="index.html"></a>
+					<div class="col-lg-8 col-md-8 col-sm-8 col-8">
+						<div class="row bg-color-name-title">
+		
+						</div>
+						<div class="navigate-links">
+							<div class="row">
+								<nav class="navbar navbar-expand-lg navbar-light">
+                                    <a class="navbar-brand"></a>
+									<button class="navbar-toggler navbar-toggler-right visible-sm" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+		                                        <span class="navbar-toggler-icon"></span>
+		                                    </button>
+									<div class="collapse navbar-collapse" id="navbarNav">
+                                        <a class="nav-box nav-box-active nav-box-first col-lg-3" href=".html">Home</a>
 
-        navbar
+										<a class="nav-box nav-box-second col-lg-3" href=".html">What we do</a>
+		
+										<a class="nav-box nav-box-third col-lg-3" href=".html">Support us</a>
+		
+										<a class="nav-box nav-box-fourth col-lg-3" href=".html">Pet Advice</a>
+									</div>
+								</nav>
+		
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="title-banner">
+			<h1 class="page-title">CatsUnion</h1>
+		</div>
+        <hr>
+   
+	</header>
+    
+	<section>
+		image with slogan
+	</section>
 
-        Title
-    </header>
-    <section>
-        image with slogan
-    </section>
+	<section>
+		Adoption
+	</section>
 
-    <section>
-        Adoption 
-    </section>
+	<section>
+		please donate
+		circular images
+	</section>
 
-    <section>
-        please donate
-        circular images
-    </section>
+	<footer>
+        <div class="container-fluid footer">
+		Social media
 
-    <footer>
-        Social media
+		Help
 
-        Help
-
-        Location-map
-    </footer>
+		Location-map
+        </div>
+	</footer>
+   
 
 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
 		integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
@@ -51,4 +89,5 @@
 		integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
 	</script>
 </body>
+
 </html>
