home page finished

--- a/index.html
+++ b/index.html
@@ -118,13 +118,27 @@
 	</section>
 
 
-	<hr>
-
 	<section>
 		<div class="container-fluid donate-panel">
 			<h1 class="title">Please Donate!</h1>
-			<div class="row">
+             <p class="subtitle"> By donating just £1 per week, <br> you could help us to give our cats...</p>
 
+			<div class="row">
+                <div class="col-12 col-lg-4 col-md-4 col-sm-4 circle-image left-circle">
+					<img src="assets/images/vets-circle.png" width="183" height="174">
+
+					<p class="cat-details"> Health checks and Vetinary support </p>
+				</div>
+				<div class="col-12 col-lg-4 col-md-4 col-sm-4 circle-image middle-circle">
+					<img src="assets/images/cat-housing-circle.png" width="183" height="174">
+
+					<p class="cat-details"> Housing and Comfort </p>
+				</div>
+				<div class="col-12 col-lg-4 col-md-4 col-sm-4 circle-image right-circle">
+					<img src="assets/images/cat-food-circle.png" width="183" height="174">
+
+					<p class="donate-details"> Food and Drink </p>
+				</div>
 
 			</div>
 		</div>
