page2 images sized and statements given

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 									<div class="collapse navbar-collapse" id="navbarNav">
 										<a class="nav-box nav-box-active nav-box-first col-lg-3" href="index.html">Home</a>
 
-										<a class="nav-box nav-box-second col-lg-3" href=".html">What we do</a>
+										<a class="nav-box nav-box-second col-lg-3" href="what-we-do.html">What we do</a>
 
 										<a class="nav-box nav-box-third col-lg-3" href=".html">Support us</a>
 
