advice page fully set up and mobile friendly. Word positioning still required.

--- a/pet-advice.html
+++ b/pet-advice.html
@@ -10,7 +10,7 @@
 		type="text/css" />
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
 		integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous" />
-	<title>Cat Union</title>
+	<title>Cat Union-Pet Advice</title>
 </head>
 
 <body>
@@ -38,14 +38,14 @@
                       <span class="navbar-toggler-icon"></span>
                     </button>
 									<div class="collapse navbar-collapse" id="navbarNav">
-										<a class="nav-box nav-box-active nav-box-first col-lg-3"
-											href="index.html">Home</a>
+										<a class="nav-box  nav-box-first col-lg-3" href="index.html">Home</a>
 
 										<a class="nav-box nav-box-second col-lg-3" href="what-we-do.html">What we do</a>
 
-										<a class="nav-box nav-box-third col-lg-3" href=".html">Support us</a>
+										<a class="nav-box nav-box-third col-lg-3" href="support-us.html">Support us</a>
 
-										<a class="nav-box nav-box-fourth col-lg-3" href=".html">Pet Advice</a>
+										<a class="nav-box nav-box-active nav-box-fourth col-lg-3"
+											href="pet-advice.html">Pet Advice</a>
 									</div>
 								</nav>
 							</div>
@@ -55,7 +55,7 @@
 			</div>
 		</div>
 		<div class="title-banner">
-			<h1 class="page-title">CatsUnion</h1>
+			<h1 class="page-title">Pet Advice</h1>
 		</div>
 
 	</header>
@@ -64,86 +64,79 @@
 		<div class="container-fluid long-image">
 			<div class="row">
 
-				<div class="col-12 main-page-background">
+				<div class="col-12 advice-page-background">
 				</div>
-				<div class="slogan">
-					<p>Cats are at the heart of everything we do.</p>
+				<div class="advice-slogan">
+					<p>Recommended Cat Care videos below...</p>
 				</div>
 			</div>
 		</div>
 	</section>
 
-
 	<section>
-		<div class="container-fluid adopting-panel">
-			<h1 class="title">Adopt Today!</h1>
+		<div class="container-fluid videos-section">
 			<div class="row">
+				<div class="col-lg-6 col-md-6 col-sm-12 col-11">
 
-				<div class="col-6 col-lg-4 col-md-4 col-sm-6 cat-box">
-					<img src="assets/images/Salem.png" width="253" height="182">
-
-					<p class="cat-details"> Salem/Male/6 </p>
+					<div class="embed-responsive embed-responsive-4by3">
+						<iframe class="video-box embed-responsive-item" src="https://www.youtube.com/embed/aHKtChm6kgI"
+							allowfullscreen></iframe>
+						<p class="video-title">Benefits of having a cat</p>
+					</div>
 				</div>
-				<div class="col-6 col-lg-4 col-md-4 col-sm-6 cat-box">
-					<img src="assets/images/Savannah.jpg" width="253" height="182">
+				<div class="col-lg-6 col-md-6 col-sm-12 col-11">
 
-					<p class="cat-details"> Savannah/Female/14 </p>
+					<div class="embed-responsive embed-responsive-4by3">
+						<iframe class="video-box embed-responsive-item" src="https://www.youtube.com/embed/aHKtChm6kgI"
+							allowfullscreen></iframe>
+						<p class="video-title">Benefits of having a cat</p>
+					</div>
 				</div>
-				<div class="col-6 col-lg-4 col-md-4 col-sm-6 cat-box">
-					<img src="assets/images/charlie.png" width="253" height="182">
-
-					<p class="cat-details"> Charlie/Male/8 </p>
-				</div>
-
-
-				<div class="col-6 col-lg-4 col-md-4 col-sm-6 cat-box">
-					<img src="assets/images/Cleo.png" width="253" height="182">
-
-					<p class="cat-details"> Cleo/Female/6 mths </p>
-				</div>
-				<div class="col-6 col-lg-4 col-md-4 col-sm-6 cat-box">
-					<img src="assets/images/Nala.png" width="253" height="182">
-
-					<p class="cat-details"> Nala/Female/7 </p>
-				</div>
-				<div class="col-6 col-lg-4 col-md-4 col-sm-6 cat-box">
-					<img src="assets/images/cole.jpg" width="253" height="182">
-
-					<p class="cat-details"> Cole/Male/12 </p>
-				</div>
-
-
 			</div>
-			<p class="subtitle"> Can you give us a loving home? <br> Give CatsUnion a call.  </p>
-		</div>
-	</section>
 
+			<div class="row">
+				<div class="col-lg-6 col-md-6 col-sm-12 col-11">
 
-	<section>
-		<div class="container-fluid donate-panel">
-			<h1 class="title">Please Donate!</h1>
-			<p class="subtitle"> By donating just £1 per week, <br> you could help us to give our cats...</p>
-
-				<div class="row">
-					<div class="col-12 col-lg-4 col-md-4 col-sm-4 circle-image left-circle">
-						<img src="assets/images/vets-circle.png" width="183" height="174">
-
-						<p class="cat-details"> Health checks and Vetinary support </p>
+					<div class="embed-responsive embed-responsive-4by3">
+						<iframe class="video-box embed-responsive-item" src="https://www.youtube.com/embed/aHKtChm6kgI"
+							allowfullscreen></iframe>
+						<p class="video-title">Benefits of having a cat</p>
 					</div>
-					<div class="col-12 col-lg-4 col-md-4 col-sm-4 circle-image middle-circle">
-						<img src="assets/images/cat-housing-circle.png" width="183" height="174">
-
-						<p class="cat-details"> Housing and Comfort </p>
-					</div>
-					<div class="col-12 col-lg-4 col-md-4 col-sm-4 circle-image right-circle">
-						<img src="assets/images/cat-food-circle.png" width="183" height="174">
-
-						<p class="donate-details"> Food and Drink </p>
-					</div>
-
 				</div>
+				<div class="col-lg-6 col-md-6 col-sm-12 col-11">
+
+					<div class="embed-responsive embed-responsive-4by3">
+						<iframe class="video-box embed-responsive-item" src="https://www.youtube.com/embed/aHKtChm6kgI"
+							allowfullscreen></iframe>
+						<p class="video-title">Benefits of having a cat</p>
+					</div>
+				</div>
+			</div>
+
+			<div class="row">
+				<div class="col-lg-6 col-md-6 col-sm-12 col-11">
+
+					<div class="embed-responsive embed-responsive-4by3">
+						<iframe class="video-box embed-responsive-item" src="https://www.youtube.com/embed/aHKtChm6kgI"
+							allowfullscreen></iframe>
+						<p class="video-title">Benefits of having a cat</p>
+					</div>
+				</div>
+				<div class="col-lg-6 col-md-6 col-sm-12 col-11">
+
+					<div class="embed-responsive embed-responsive-4by3">
+						<iframe class="video-box embed-responsive-item" src="https://www.youtube.com/embed/aHKtChm6kgI"
+							allowfullscreen></iframe>
+						<p class="video-title">Benefits of having a cat</p>
+					</div>
+				</div>
+			</div>
 		</div>
+
+
 	</section>
+
+
 
 	<footer>
 		<div class="container-fluid footer-panel">
