pet-advice page complete

--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
 
 										<a class="nav-box nav-box-second col-lg-3" href="what-we-do.html">What we do</a>
 
-										<a class="nav-box nav-box-third col-lg-3" href=".html">Support us</a>
+										<a class="nav-box nav-box-third col-lg-3" href="support-us.html">Support us</a>
 
-										<a class="nav-box nav-box-fourth col-lg-3" href=".html">Pet Advice</a>
+										<a class="nav-box nav-box-fourth col-lg-3" href="pet-advice.html">Pet Advice</a>
 									</div>
 								</nav>
 							</div>
