--- a/pet-advice.html
+++ b/pet-advice.html
@@ -77,57 +77,66 @@
 		<div class="container-fluid videos-section">
 			<div class="row">
 				<div class="col-lg-6 col-md-6 col-sm-12 col-11">
-
+					<p class="video-title">Benefits of having a cat</p>
 					<div class="embed-responsive embed-responsive-4by3">
+
 						<iframe class="video-box embed-responsive-item" src="https://www.youtube.com/embed/aHKtChm6kgI"
 							allowfullscreen></iframe>
-						<p class="video-title">Benefits of having a cat</p>
+
 					</div>
 				</div>
 				<div class="col-lg-6 col-md-6 col-sm-12 col-11">
-
+					<p class="video-title">Mistakes owners make</p>
 					<div class="embed-responsive embed-responsive-4by3">
-						<iframe class="video-box embed-responsive-item" src="https://www.youtube.com/embed/aHKtChm6kgI"
-							allowfullscreen></iframe>
-						<p class="video-title">Benefits of having a cat</p>
-					</div>
-				</div>
-			</div>
 
-			<div class="row">
-				<div class="col-lg-6 col-md-6 col-sm-12 col-11">
-
-					<div class="embed-responsive embed-responsive-4by3">
-						<iframe class="video-box embed-responsive-item" src="https://www.youtube.com/embed/aHKtChm6kgI"
+						<iframe class="video-box embed-responsive-item" src="https://www.youtube.com/embed/yxsP0KyOlgs"
 							allowfullscreen></iframe>
-						<p class="video-title">Benefits of having a cat</p>
-					</div>
-				</div>
-				<div class="col-lg-6 col-md-6 col-sm-12 col-11">
 
-					<div class="embed-responsive embed-responsive-4by3">
-						<iframe class="video-box embed-responsive-item" src="https://www.youtube.com/embed/aHKtChm6kgI"
-							allowfullscreen></iframe>
-						<p class="video-title">Benefits of having a cat</p>
 					</div>
 				</div>
 			</div>
 
 			<div class="row">
 				<div class="col-lg-6 col-md-6 col-sm-12 col-11">
-
+					<p class="video-title">Neutering</p>
 					<div class="embed-responsive embed-responsive-4by3">
-						<iframe class="video-box embed-responsive-item" src="https://www.youtube.com/embed/aHKtChm6kgI"
+
+						<iframe class="video-box embed-responsive-item" src="https://www.youtube.com/embed/sMeIYDaAlLg
+
+
+"
 							allowfullscreen></iframe>
-						<p class="video-title">Benefits of having a cat</p>
+
 					</div>
 				</div>
 				<div class="col-lg-6 col-md-6 col-sm-12 col-11">
-
+					<p class="video-title">Kitten Care</p>
 					<div class="embed-responsive embed-responsive-4by3">
-						<iframe class="video-box embed-responsive-item" src="https://www.youtube.com/embed/aHKtChm6kgI"
+
+						<iframe class="video-box embed-responsive-item" src="https://www.youtube.com/embed/uV1RMT_ld3k"
 							allowfullscreen></iframe>
-						<p class="video-title">Benefits of having a cat</p>
+
+					</div>
+				</div>
+			</div>
+
+			<div class="row">
+				<div class="col-lg-6 col-md-6 col-sm-12 col-11">
+					<p class="video-title">Causes of stress</p>
+					<div class="embed-responsive embed-responsive-4by3">
+
+						<iframe class="video-box embed-responsive-item" src="https://www.youtube.com/embed/l57-JQXEivY"
+							allowfullscreen></iframe>
+
+					</div>
+				</div>
+				<div class="col-lg-6 col-md-6 col-sm-12 col-11">
+					<p class="video-title">Make your cat happy</p>
+					<div class="embed-responsive embed-responsive-4by3">
+
+						<iframe class="video-box embed-responsive-item" src="https://www.youtube.com/embed/ZaqrTb54Xmc"
+							allowfullscreen></iframe>
+
 					</div>
 				</div>
 			</div>
