--- a/support-us.html
+++ b/support-us.html
@@ -1,41 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-      type="text/css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
-      integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
-      crossorigin="anonymous"
-    />
-    <title>Cat Union</title>
-  </head>
 
-  <body>
-    <header>
-      <div class="wrapper-header">
-        <div class="container-fluid heading-navbar">
-          <div class="row">
-            <a class="col-lg-4 col-md-4 col-sm-4 col-4 logo" href="index.html">
-            </a>
-            <div class="col-lg-8 col-md-8 col-sm-8 col-8">
-              <div class="row bg-color-name-title"></div>
-              <div class="navigate-links">
-                <div class="row">
-                  <nav class="navbar navbar-expand-lg navbar-light">
-                    <a class="navbar-brand"></a>
-                    <button
+<head>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<link rel="stylesheet" type="text/css" href="assets/css/style.css" />
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" />
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+		type="text/css" />
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
+		integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous" />
+	<title>Cat Union</title>
+</head>
+
+<body>
+	<header>
+		<div class="wrapper-header">
+			<div class="container-fluid heading-navbar">
+				<div class="row">
+					<a class="col-lg-4 col-md-4 col-sm-4 col-4 logo" href="index.html">
+					</a>
+					<div class="col-lg-8 col-md-8 col-sm-8 col-8">
+						<div class="row bg-color-name-title"></div>
+						<div class="navigate-links">
+							<div class="row">
+								<nav class="navbar navbar-expand-lg navbar-light">
+									<a class="navbar-brand"></a>
+									<button
                       class="navbar-toggler navbar-toggler-right visible-sm"
                       type="button"
                       data-toggle="collapse"
@@ -46,164 +37,145 @@
                     >
                       <span class="navbar-toggler-icon"></span>
                     </button>
-                    <div class="collapse navbar-collapse" id="navbarNav">
-                      <a
-                        class="nav-box nav-box-first col-lg-3"
-                        href="index.html"
-                        >Home</a
-                      >
+									<div class="collapse navbar-collapse" id="navbarNav">
+										<a class="nav-box nav-box-first col-lg-3" href="index.html">Home</a>
 
-                      <a
-                        class="nav-box nav-box-second col-lg-3"
-                        href="what-we-do.html"
-                        >What we do</a
-                      >
+										<a class="nav-box nav-box-second col-lg-3" href="what-we-do.html">What we do</a>
 
-                      <a
-                        class="nav-box nav-box-active nav-box-third col-lg-3"
-                        href="support-us.html"
-                        >Support us</a
-                      >
+										<a class="nav-box nav-box-active nav-box-third col-lg-3"
+											href="support-us.html">Support us</a>
 
-                      <a
-                        class="nav-box nav-box-fourth col-lg-3"
-                        href="pet-advice.html"
-                        >Pet Advice</a
-                      >
-                    </div>
-                  </nav>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="title-banner">
-        <h1 class="page-title">How can you help us?</h1>
-      </div>
-    </header>
+										<a class="nav-box nav-box-fourth col-lg-3" href="pet-advice.html">Pet Advice</a>
+									</div>
+								</nav>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="title-banner">
+			<h1 class="page-title">How can you help us?</h1>
+		</div>
+	</header>
 
-    <section>
-      <div class="container-fluid long-image">
-        <div class="row">
-          <div class="col-12 support-page-background">
-            <h1 class="support-title">Donate</h1>
-            <p>With you support we can make a real difference.</p>
-            <button type="button" class="btn btn-secondary btn-circle btn-sm">
+	<section>
+		<div class="container-fluid long-image">
+			<div class="row">
+				<div class="col-12 support-page-background">
+					<h1 class="support-title">Donate</h1>
+					<p>With you support we can make a real difference.</p>
+					<button type="button" class="btn btn-secondary btn-circle btn-sm">
               Donate Now!
             </button>
-          </div>
-        </div>
-      </div>
-    </section>
+				</div>
+			</div>
+		</div>
+	</section>
 
-    <section>
-      <div class="container-fluid adopting-panel">
-        <h1 class="title">Sponsor a cat today!</h1>
-        <div class="row">
-          <div class="col-12 col-lg-6 col-md-6 col-sm-6 sponsor-box">
-            <img src="assets/images/jess.png" width="253" height="182" />
+	<section>
+		<div class="container-fluid sponsor-panel">
+			<h1 class="title">Sponsor a cat today!</h1>
+			<div class="row">
+				<div class="col-12 col-lg-6 col-md-6 col-sm-12 sponsor-box">
+					<img src="assets/images/jess.png" width="253" height="182" />
 
-            <div class="sponsor-details">
-              <p>
-                Jess/Female/1 <br />
+					<div class="col-12 col-lg-6 col-md-6 col-sm-12 sponsor-details">
+						<p>
+							<strong>Jess/Female/1</strong> <br />
                 Will you sponsor Jess. She is a loveable kitten who believes she
                 is a plant. We often find her lounging out inside different
                 plant pots.
               </p>
-              <button type="submit" class="btn btn-primary btn-sm">
+							<button type="submit" class="btn btn-primary btn-sm">
                 Sponsor
               </button>
-            </div>
-          </div>
-          <div class="col-12 col-lg-6 col-md-6 col-sm-6 sponsor-box">
-            <img src="assets/images/nico.jpg" width="253" height="182" />
 
-            <div class="sponsor-details">
-              <p>
-                Nico/Male/4 <br />
+					</div>
+				</div>
+				<div class="col-12 col-lg-6 col-md-6 col-sm-12 sponsor-box">
+					<img src="assets/images/nico.jpg" width="253" height="182" />
+
+					<div class="col-12 col-lg-6 col-md-6 col-sm-12 sponsor-details">
+						<p>
+							<strong> Nico/Male/4</strong> <br />
                 Will you sponsor Nico. He loves to sleep, but those rare moments
                 of alertness, he will exhaust you with his speed and energy.
               </p>
-              <button type="submit" class="btn btn-primary btn-sm">
+							<button type="submit" class="btn btn-primary btn-sm">
                 Sponsor
               </button>
-            </div>
-          </div>
-          <div class="col-12 col-lg-6 col-md-6 col-sm-6 sponsor-box">
-            <img src="assets/images/cody.png" width="253" height="182" />
+					</div>
+				</div>
+				<div class="col-12 col-lg-6 col-md-6 col-sm-6 sponsor-box">
+					<img src="assets/images/cody.png" width="253" height="182" />
 
-            <div class="sponsor-details">
-              <p>
-                Cody/Male/6 <br />
+					<div class="col-12 col-lg-6 col-md-6 col-sm-6 sponsor-details">
+						<p>
+							<strong>Cody/Male/6</strong> <br />
                 Will you sponsor Cody. He loves to cuddle and will often curl up
                 on somebody's lap to sleep.
               </p>
-              <button type="submit" class="btn btn-primary btn-sm">
+							<button type="submit" class="btn btn-primary btn-sm">
                 Sponsor
               </button>
-            </div>
-          </div>
-          <div class="col-12 col-lg-6 col-md-6 col-sm-6 sponsor-box">
-            <img src="assets/images/Kiara.png" width="253" height="182" />
-            <div class="sponsor-details">
-              <p>
-                Kiara/Female/4 months<br />Will you sponsor Kiara. She is our
+					</div>
+				</div>
+				<div class="col-12 col-lg-6 col-md-6 col-sm-12 sponsor-box">
+					<img src="assets/images/Kiara.png" width="253" height="182" />
+					<div class="col-12 col-lg-6 col-md-6 col-sm-12 sponsor-details">
+						<p>
+							<strong>Kiara/Female/4 months</strong><br />Will you sponsor Kiara. She is our
                 youngest kitten, and still is very curious. She loves our camera
                 and loves to pose.
               </p>
-              <button type="submit" class="btn btn-primary btn-sm">
+							<button type="submit" class="btn btn-primary btn-sm">
                 Sponsor
               </button>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
+              
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
 
-    <section>
-      <div class="container-fluid long-image">
-        <div class="row no-gutters">
-          <div class="col-12 col-lg-6 col-md-6 col-sm-12">
-            <div class="fundraising-background"></div>
-            <h1 class="fundraising-title">Fundraising</h1>
-            <p class="fundraising-info">
-              Want to support in a different and unique way? please get in touch
-              with us via fundraising@catunion.com for more information of how
-              you can help, and how you can send any money raised to us.
-            </p>
-          </div>
+	<section>
+		<div class="container-fluid long-image">
+			<div class="row no-gutters">
+				<div class="col-12 col-lg-6 col-md-6 col-sm-12">
+					<div class="fundraising-background"></div>
+					<h1 class="fundraising-title">Fundraising</h1>
+					<p class="fundraising-info">
+						Want to support in a different and unique way? please get in touch
+						with us via fundraising@catunion.com for more information of how
+						you can help, and how you can send any money raised to us.
+					</p>
+				</div>
 
-          <div class="col-12 col-lg-6 col-md-6 col-sm-12">
-            <div class="volunteer-background"></div>
-            <h1 class="volunteer-title">Volunteer</h1>
-            <p class="volunteer-info">
-              Are you able to spare some time to help out? Please fill in the
-              form below to apply to be one of our volunteer cat friends!
-            </p>
-          </div>
-        </div>
-      </div>
-    </section>
+				<div class="col-12 col-lg-6 col-md-6 col-sm-12">
+					<div class="volunteer-background"></div>
+					<h1 class="volunteer-title">Volunteer</h1>
+					<p class="volunteer-info">
+						Are you able to spare some time to help out? Please fill in the
+						form below to apply to be one of our volunteer cat friends!
+					</p>
+				</div>
+			</div>
+		</div>
+	</section>
 
-    <footer>
-      <div class="container-fluid footer-panel">
-        <div class="row">
-          <div class="col-lg-4 col-md-4 col-sm-4 col-4 social-media">
-            <p>Follow us</p>
-            <a href="http://www.facebook.com" target="_blank"
-              ><i class="fab fa-facebook-square"></i
-            ></a>
-            <a href="http://www.twitter.com" target="_blank"
-              ><i class="fab fa-twitter-square"></i
-            ></a>
-            <a href="http://www.instagram.com" target="_blank"
-              ><i class="fab fa-instagram"></i
-            ></a>
-          </div>
-          <div class="col-lg-4 col-md-4 col-sm-4 col-4 help-us">
-            <p>Help Today</p>
-            <button
+	<footer>
+		<div class="container-fluid footer-panel">
+			<div class="row">
+				<div class="col-lg-4 col-md-4 col-sm-4 col-4 social-media">
+					<p>Follow us</p>
+					<a href="http://www.facebook.com" target="_blank"><i class="fab fa-facebook-square"></i></a>
+					<a href="http://www.twitter.com" target="_blank"><i class="fab fa-twitter-square"></i></a>
+					<a href="http://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+				</div>
+				<div class="col-lg-4 col-md-4 col-sm-4 col-4 help-us">
+					<p>Help Today</p>
+					<button
               type="button"
               class="btn btn-primary button-color"
               data-toggle="modal"
@@ -211,11 +183,11 @@
             >
               Donate
             </button>
-          </div>
+				</div>
 
-          <div class="col-lg-4 col-md-4 col-sm-4 col-4 Location">
-            <p>Location</p>
-            <button
+				<div class="col-lg-4 col-md-4 col-sm-4 col-4 Location">
+					<p>Location</p>
+					<button
               type="button"
               class="btn btn-primary button-color"
               data-toggle="modal"
@@ -223,24 +195,18 @@
             >
               Map
             </button>
-          </div>
-        </div>
-      </div>
-    </footer>
+				</div>
+			</div>
+		</div>
+	</footer>
 
-    <div
-      class="modal fade"
-      id="google-location-modal"
-      tabindex="-1"
-      role="dialog"
-      aria-labelledby="map-modal"
-      aria-hidden="true"
-    >
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="map-modal">Find us</h5>
-            <button
+	<div class="modal fade" id="google-location-modal" tabindex="-1" role="dialog" aria-labelledby="map-modal"
+		aria-hidden="true">
+		<div class="modal-dialog" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 class="modal-title" id="map-modal">Find us</h5>
+					<button
               type="button"
               class="close"
               data-dismiss="modal"
@@ -248,45 +214,38 @@
             >
               <span aria-hidden="true">&times;</span>
             </button>
-          </div>
-          <div class="modal-body">
-            <div class="row">
-              <div
-                class="col-lg-12 col-md-12 col-sm-12 col-12 modal-image"
-              ></div>
-              <div class="address-info">
-                <p>CatsUnion, The Alley, Little Wenlock, Telford, TF6 5BG</p>
-                <p>Telephone: 01632 960809</p>
-              </div>
-            </div>
-            <div class="modal-footer">
-              <button
+				</div>
+				<div class="modal-body">
+					<div class="row">
+						<div class="col-lg-12 col-md-12 col-sm-12 col-12 modal-image"></div>
+						<div class="address-info">
+							<p>CatsUnion, The Alley, Little Wenlock, Telford, TF6 5BG</p>
+							<p>Telephone: 01632 960809</p>
+						</div>
+					</div>
+					<div class="modal-footer">
+						<button
                 type="button"
                 class="btn btn-secondary"
                 data-dismiss="modal"
               >
                 Close
               </button>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 
-    <script
-      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-      integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+		integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+	</script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+		integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous">
+	</script>
+	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+		integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+	</script>
+</body>
+
 </html>
