fixed white space errors on pages with smaller screens

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="body-font">
       <header>
         <div class="wrapper-header">
-          <div class="container-fluid heading-navbar">
+          <div class="heading-navbar container-fluid">
             <div class="row">
               <a
                 class="col-lg-4 col-md-4 col-sm-4 col-4 logo"
@@ -119,13 +119,13 @@
               </div>
               <div class="col-6 col-lg-4 col-md-4 col-sm-6 cat-box">
                 <img
-                  src="assets/images/Savannah.jpg"
+                  src="assets/images/Skye.jpg"
                   width="253"
                   height="182"
                   alt="Savannah-Cat"
                 />
 
-                <p class="cat-details">Savannah/Female/14</p>
+                <p class="cat-details">Skye/Female/14</p>
               </div>
               <div class="col-6 col-lg-4 col-md-4 col-sm-6 cat-box">
                 <img
