--- a/support-us.html
+++ b/support-us.html
@@ -17,6 +17,7 @@
       href="https://fonts.googleapis.com/css2?family=Kanit&display=swap"
       rel="stylesheet"
     />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
@@ -247,7 +248,7 @@
                 want to be one of our volunteer cat friends!
               </h3>
 
-              <div class="container-fluid">
+            <div class="container-fluid">
                 <div class="row">
                   <div
                     class="col-lg-6 col-md-12 col-sm-12 col-12 form-group form-boxed volunteer-application"
@@ -279,7 +280,6 @@
                         <label for="coverletter">Attach cover letter</label>
                         <input
                           type="file"
-                          class="form-coverletterattach"
                           id="coverletter"
                         />
                       </div>
@@ -290,6 +290,7 @@
                   </div>
                 </div>
               </div>
+             
             </div>
           </div>
         </div>
