updated error with div in footer

--- a/what-we-do.html
+++ b/what-we-do.html
@@ -104,7 +104,7 @@
                      &nbsp;
                      |
                      &nbsp;
-                     <a href="#adopt">Adopt</a>
+                     <a href="index.html#adopt">Adopt</a>
                      &nbsp;
                      |
                      &nbsp;
