--- a/support-us.html
+++ b/support-us.html
@@ -267,7 +267,7 @@
                      &nbsp;
                      |
                      &nbsp;
-                     <a href="#adopt">Adopt</a>
+                     <a href="index.html#adopt">Adopt</a>
                      &nbsp;
                      |
                      &nbsp;
