added _blank to the paypal links on support us

--- a/support-us.html
+++ b/support-us.html
@@ -443,6 +443,7 @@
                           <a
                             href="https://www.paypal.com/cgi-bin/webscr?&cmd=_xclick&business=catsunion@paypal.com&currency_code=GBP&amount=1&item_name=Donation"
                             class="btn btn-success btn-block"
+                            target="blank"
                             >Checkout <i class="fa fa-angle-right"></i
                           ></a>
                         </td>
@@ -526,6 +527,7 @@
                           <a
                             href="https://www.paypal.com/cgi-bin/webscr?&cmd=_xclick&business=catsunion@paypal.com&currency_code=GBP&amount=15&item_name=Sponsor"
                             class="btn btn-success btn-block"
+                            target="blank"
                             >Checkout <i class="fa fa-angle-right"></i
                           ></a>
                         </td>
